# core-foundry

./: .gitignore  CODE_REVIEW.md  README.md  pyproject.toml
agent_adapters/: anthropic_adapter.py  base.py  openai_adapter.py
core_foundry.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
corefoundry/: agent.py  core.py
corefoundry.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
examples/: demo.py
examples/my_tools/: text_tools.py
tests/: conftest.py  test_adapters.py  test_agent_comprehensive.py  test_doctests.py  test_integration.py  test_models.py  test_regressions.py  test_tool_registry.py
